# model-campus-evacuation

./: .env.template  .gitignore  CMakeLists.txt  README.md  bootstrap.sh  install.sh  integration.py  requirements.txt  run.sh  run_scenarios.sh
.github/: pull_request_template.md
analysis/: README.md  create_heatmap_animation.py  data_analysis  data_analysis.py  map_roads.py  visualize_processed.py
data_creation/: README.md  carleton_campus_car_edges.csv  carleton_campus_car_roads.geojson  carleton_campus_major_intersections.csv  carleton_campus_major_intersections.geojson  data_creation.py  sim_road_lengths.csv  sim_road_to_osm_edges.csv
docs/: README.md
input_data/geographic_data/: README.md  intersections_ab.geojson
input_data/od_data/: README.md  abc_test.csv  campus_traffic_flow_01.csv  od_data_ab.csv  od_data_abcd.csv  simple_poll.xlsx  simple_poll_results.csv
input_data/parking_lot_schedules/: README.md  default.csv  example.csv  n.csv  scenario_01.csv  scenario_02.csv  scenario_03.csv  scenario_04.csv  (+7 more)
main/: CMakeLists.txt  intersection_test.cpp  main.cpp  scenario_01.cpp
main/include/: constants.hpp  customer.hpp  event.hpp  mes.hpp  parking_lot.hpp  road.hpp  shop_floor.hpp  top.hpp
main/include/atomic_models/: intersection.hpp  parking_lot.hpp  road.hpp
main/include/atomics/: parking_lot.hpp  road_intersection.hpp  vehicle.hpp
main/include/coupled_models/: carleton_university_campus.hpp  top.hpp
main/include/data_structures/: intersection_config.hpp  od_datum.hpp  parking_lot_schedule.hpp  vehicle.hpp
main/include/io/: load_data.hpp
(+15 files in other folders)
